app/assets/stylesheets/models/activities.css.scss
// activity table
.activity-table {
  th.status-icon {
    width: 30px;
  }

  td.popularity-icon {
    color: var(--d-on-surface-muted);
  }

  .activity-title .mdi::before {
    vertical-align: bottom;
  }

  th.type-icon,
  td.type-icon {
    width: 18px;
    color: var(--d-on-surface-muted);
    padding-left: 0;
    padding-right: 0;
  }

  td.status-icon {
    padding-left: 4px;
  }

  .status {
    width: 150px;
  }

  .count {
    width: 130px;
  }

  td.name {
    vertical-align: middle;
    max-width: 95px;
  }

  td.buttons{
    vertical-align: middle;
    text-align: right;
    width: fit-content;
    max-width: fit-content;

    .btn {
      margin-top: -6px;
      margin-bottom: -6px;
    }
  }
}

/* stylelint-disable-next-line selector-class-pattern */
.progress_visibility {
  position: relative;
  top: 1px; // move the icon a bit downwards
}

// activity
.activity-description {
  .card-title {
    display: flex;
    flex-direction: row;
    align-items: center;

    .card-title-navigation {
      display: flex;
      flex-wrap: wrap;
      font-size: 24px;
      font-weight: 300;
      line-height: normal;
      margin-left: auto;
    }
  }

  .card-supporting-text {
    font-size: 18px;
    line-height: 1.5;
  }
}

.activity-description img {
  cursor: pointer;
}

.activity-description .highlighter-rouge .err {
  border: none;
}

.activity-description .dodona-centered-group {
  margin: 0 auto 9.5px;
  text-align: center;
}

.activity-description .dodona-centered-group img {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

.activity-description .dodona-centered-group table {
  width: auto;
  display: inline-table;
  vertical-align: middle;
  text-align: left;
}

.activity-description .dodona-centered-group img + img,
.activity-description .dodona-centered-group img + table,
.activity-description .dodona-centered-group table + img,
.activity-description .dodona-centered-group table + table {
  margin-left: 16px;
}

.content-page-actions {
  padding-bottom: 16px;
  text-align: center;
  display: flex;
  justify-content: space-between;

  /* stylelint-disable-next-line selector-id-pattern */
  #content_page_read_action {
    display: inline-flex;
  }
}

.footnotes::before {
  content: "";
  width: 150px;
  height: 16px;
  margin-left: 16px;
  display: block;
  border-top: 1px solid var(--d-on-surface-muted);
}

.footnotes {
  font-size: 90%;
  margin: 16px 0 0 -16px;
}

center img {
  vertical-align: top;
  margin-left: 16px;
  margin-right: 16px;
}

// editor
#editor-text .cm-editor {
  height: 300px;
}

// white background for transparent images
.strp-content-element {
  background-color: var(--d-surface);
}

.courses-using-exercise .course {
  padding-bottom: 1em;
}

.activity-info {
  .labels {
    margin-bottom: 1em;

    a:hover {
      text-decoration: none;
    }
  }

  .repo-details {
    p {
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
      padding-top: 0.3em;
    }

    i {
      vertical-align: -3px;
      padding-right: 0.6em;
    }
  }

  .activity-detail {
    margin-bottom: 1em;
  }
}

// reduce padding for tabs for sample solutions
.sample-solutions {
  .card-title {
    padding-bottom: 0;
  }

  .card-supporting-text {
    padding-top: 0;
  }
}

#restore-boilerplate {
  a {
    cursor: pointer;
  }
}

.code-wrapper {
  position: relative;
  overflow: hidden;

  code {
    overflow: auto;
    width: calc(100%);
    display: block;
  }

  d-copy-button {
    position: absolute;
    right: 0;
    top: 0;
    background-color: var(--d-code-bg);
  }
}

